RESOLVED FIXED208755
Fix scrolling tree hit-testing on scrolled and zoomed pages
https://bugs.webkit.org/show_bug.cgi?id=208755
Summary Fix scrolling tree hit-testing on scrolled and zoomed pages
Simon Fraser (smfr)
Reported 2020-03-06 19:52:29 PST
Fix scrolling tree hit-testing on scrolled and zoomed pages
Attachments
Patch (12.08 KB, patch)
2020-03-06 19:54 PST, Simon Fraser (smfr)
zalan: review+
Simon Fraser (smfr)
Comment 1 2020-03-06 19:54:11 PST
Radar WebKit Bug Importer
Comment 2 2020-03-06 19:54:33 PST
Simon Fraser (smfr)
Comment 3 2020-03-06 21:04:23 PST
Note You need to log in before you can comment on or make changes to this bug.