Fix scrolling tree hit-testing on scrolled and zoomed pages https://bugs.webkit.org/show_bug.cgi?id=208755

Reviewed by Zalan Bujtas.
Source/WebCore:

Map the hit-test point from view to content coordinates before hit-testing the scrolling tree.

Tests: fast/scrolling/mac/overflow-scrolled-document.html
       fast/scrolling/mac/overflow-zoomed-document.html

* page/scrolling/ScrollingTree.cpp:
(WebCore::ScrollingTree::handleWheelEvent):

LayoutTests:

New tests for scrolled and zoomed documents.

Fix existing tests which used window.scrollTop = 0, which is not a thing.

* fast/scrolling/mac/absolute-in-overflow-scroll.html:
* fast/scrolling/mac/async-scroll-overflow.html:
* fast/scrolling/mac/move-node-in-overflow-scroll.html:
* fast/scrolling/mac/overflow-scrolled-document-expected.txt: Added.
* fast/scrolling/mac/overflow-scrolled-document.html: Copied from LayoutTests/fast/scrolling/mac/async-scroll-overflow.html.
* fast/scrolling/mac/overflow-zoomed-document-expected.txt: Added.
* fast/scrolling/mac/overflow-zoomed-document.html: Copied from LayoutTests/fast/scrolling/mac/async-scroll-overflow.html.
* fast/scrolling/mac/overlapped-overflow-scroll.html:

Canonical link: https://commits.webkit.org/221664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258055 268f45cc-cd09-0410-ab3c-d52691b4dbfc